Bugfix/ETSL-822 fixed spacing, text alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -800,6 +800,7 @@
         font-size: toRem(16);
         font-weight: normal;
         line-height: 1.5;
+        padding-right: toRem(16);
       }
 
       ul {
@@ -867,7 +868,7 @@
     }
 
     .cmp-teaser__action-container {
-      margin-top: toRem(40);
+      margin-top: toRem(24);
     }
 
     h2 {
